--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "dependencies": {
     "express": "4.10.1",
     "morgan": "1.4.1",
-    "opencv": "git+https://github.com/peterbraden/node-opencv.git",
+    "opencv": "4.3.0",
     "socket.io": "1.2.1"
   }
 }
